# MpRPCSelf

./: CMakeLists.txt  autobuild.sh  readme.md  startservice.sh  test.conf
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendService.cc  userservice.cc
example/caller/: CMakeLists.txt  callFriendService.cc  callUserService.cc
src/: CMakeLists.txt  logger.cc  mprpcChannel.cc  mprpcConfig.cc  mprpcController.cc  mprpcapplication.cc  mprpcprovider.cc  rpcheader.proto  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcChannel.h  mprpcController.h  mprpcapplication.h  mprpcconfig.h  mprpcprovider.h  zookeeperutil.h
test/protobuf/: main  main.cc  test.pb.cc  test.pb.h  test.proto
